--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,8 @@
       <fieldset class="form__list">
         <legend>Personal information</legend>
         <div class="form-box">
-          <label for="sname" class="form__list-item">Surname:
+          <label for="sname" class="form__list-item">
+            Surname:
             <input
               type="text"
               id="sname"
@@ -25,7 +26,8 @@
         </div>
 
         <div class="form-box">
-          <label for="name"  class="form__list-item">Name:
+          <label for="name"  class="form__list-item">
+            Name:
             <input
               type="text"
               id="name"
@@ -35,7 +37,8 @@
         </div>
 
         <div class="form-box">
-          <label for="old" class="form__list-item">How old are You?
+          <label for="old" class="form__list-item">
+            How old are You?
             <input
               id="old"
               class="form__question"
@@ -48,22 +51,25 @@
         </div>
 
         <div class="form-box">
-          <label for="birth" class="form__list-item">Full date of birth:
+          <label for="birth" class="form__list-item">
+            Full date of birth:
             <input type="date" id="birth">
           </label>
         </div>
 
         <div class="form-box">
-          <label id="terms" class="form__list-item">I accept the term of the agreement
+          <label id="terms" class="form__list-item">
+            I accept the term of the agreement
             <input for="terms"  type="checkbox">
           </label>
         </div>
       </fieldset>
 
       <fieldset class="form__list">
-        <legend >Registration</legend>
+        <legend>Registration</legend>
         <div class="form-box">
-          <label for="email" class="form__list-item">E-mail:
+          <label for="email" class="form__list-item">
+            E-mail:
             <input
               type="email"
               id="email"
@@ -74,7 +80,8 @@
         </div>
 
         <div class="form-box">
-          <label for="pass"  class="form__list-item">Password:
+          <label for="pass"  class="form__list-item">
+            Password:
             <input
               type="password"
               minlength="8"
@@ -89,7 +96,8 @@
       <fieldset class="form__list">
         <legend>An interesting fact about you!</legend>
         <div class="form-box">
-          <label for="cats dogs" class="form__list-item">Do you love cats?
+          <label for="cats dogs" class="form__list-item">
+            Do you love cats?
             <label>
               <input
                 id="cats"
@@ -115,13 +123,15 @@
         </div>
 
         <div class="form-box">
-          <label for="color"  class="form__list-item">What is your favorite color?
+          <label for="color"  class="form__list-item">
+            What is your favorite color?
             <input type="color" id="color">
           </label>
         </div>
 
         <div class="form-box">
-          <label for="time" class="form__list-item">What time do you go to bed?
+          <label for="time" class="form__list-item">
+            What time do you go to bed?
             <input
               id="time"
               type="time"
@@ -131,7 +141,8 @@
         </div>
 
         <div class="form-box">
-          <label for="cars" class="form__list-item">What are your favorite brand of cars?
+          <label for="cars" class="form__list-item">
+            What are your favorite brand of cars?
             <select
               id="cars"
               multiple
@@ -149,7 +160,8 @@
         </div>
 
         <div class="form-box">
-          <label for="work" class="form__list-item">How do you rate our work?
+          <label for="work" class="form__list-item">
+            How do you rate our work?
             <input
               id="work"
               type="range"
@@ -173,7 +185,8 @@
         </div>
 
         <div class="form-box">
-          <label for="recomended"  class="form__list-item">Would you recommend us?
+          <label for="recomended"  class="form__list-item">
+            Would you recommend us?
             <select name="recomended" id="recomended">
               <option value="yes">yes</option>
               <option value="no">no</option>
