--- a/src/index.html
+++ b/src/index.html
@@ -18,27 +18,27 @@
         <label class="form-field">
           Surname
           <input 
-          type="text" 
-          name="surname" 
-          autocomplete="off"
+            type="text" 
+            name="surname" 
+            autocomplete="off"
           >
         </label> 
         <label class="form-field">
           Name:
           <input 
-          type="text" 
-          name="name" 
-          autocapitalize="off"
+            type="text" 
+            name="name" 
+            autocapitalize="off"
           >
         </label> 
         <label class="form-field">
           How old are You?
           <input 
-          type="number" 
-          name="age" 
-          min="1" 
-          max="100" 
-          value="12"
+            type="number" 
+            name="age" 
+            min="1" 
+            max="100" 
+            value="12"
           >
         </label> 
         <label class="form-field">
@@ -56,20 +56,20 @@
         <label class="form-field">
           E-mail:
           <input 
-          type="email" 
-          placeholder="email@example.com" 
-          name="email" 
-          required
+            type="email" 
+            placeholder="email@example.com" 
+            name="email" 
+            required
           >
         </label> 
         <label>
           Password:
           <input 
-          type="password" 
-          name="password" 
-          minlength="6" 
-          maxlength="12" 
-          required
+            type="password" 
+            name="password" 
+            minlength="6" 
+            maxlength="12" 
+            required
           >
         </label> 
       </fieldset>
@@ -78,17 +78,21 @@
         <legend>An interesting fact about you!</legend>
         <label class="form-field">
           Do yoy love cats?
-          <input type="radio" name="loveCats">
-          Yes
-          <input type="radio" name="dontLoveCats">
-          No
+          <label>
+            <input type="radio" name="loveCats">
+             Yes
+          </label> 
+          <label>
+            <input type="radio" name="dontLoveCats">
+             No
+          </label>
         </label>
         <label class="form-field">
           What is your favorite color?
           <input 
-          type="color" 
-          name="color" 
-          value="black"
+            type="color" 
+            name="color" 
+            value="black"
           >
         </label>
         <label class="form-field">
