--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   <body>
     <form action="https://mate-academy-form-lesson.herokuapp.com/create-application" method="post"> 
 
-      <fieldset class="personalInformation bloc">
+      <fieldset class="bloc">
         <legend>Personal information</legend> 
         <label class="form-field">
           Surname
@@ -51,7 +51,7 @@
         </label>
       </fieldset>
 
-      <fieldset class="registration bloc">
+      <fieldset class="bloc">
         <legend>Registration</legend>
         <label class="form-field">
           E-mail:
@@ -74,7 +74,7 @@
         </label> 
       </fieldset>
 
-      <fieldset class="factAboutYou bloc">
+      <fieldset class="bloc">
         <legend>An interesting fact about you!</legend>
         <label class="form-field">
           Do yoy love cats?
