--- a/src/index.html
+++ b/src/index.html
@@ -83,7 +83,7 @@
              Yes
           </label> 
           <label>
-            <input type="radio" name="lgoveCats">
+            <input type="radio" name="loveCats">
              No
           </label>
         </label>
