--- a/src/index.html
+++ b/src/index.html
@@ -22,20 +22,22 @@
           <input type="text" name="name" 
           autocomplete="off" required>
         </label>
-      <label class="field-form">
+        <label class="field-form">
         Age:
-        <input type="number" name="age" 
+          <input type="number" name="age" 
         min="1" max="100" 
         value="12">
         </label>
-      <label class="field-form">
+        <label class="field-form">
         Email address:
-        <input type="email" name="email address" 
-        placeholder="email@example.com" required multiple>
+          <input type="email" 
+          name="email address" 
+          placeholder="email@example.com" required 
+          multiple>
         </label>
-      <label class="field-form">
+        <label class="field-form">
         password:
-        <input type="password" name="password" required>
+          <input type="password" name="password" required>
         </label>
         </fieldset>
       <fieldset class="group-form">
