--- a/src/index.html
+++ b/src/index.html
@@ -37,47 +37,48 @@
         </label>
         <label class="field-form">
         password:
-          <input type="password" name="password" required>
+          <input type="password" name="password" 
+          required>
         </label>
-        </fieldset>
+      </fieldset>
       <fieldset class="group-form">
         <label class="field-form">
-        <input type="checkbox" name="terms agreement">
+          <input type="checkbox" name="terms agreement">
         I accept the terms of the agreement
-        </label>
+          </label>
       <label class="field-form">
-        <input type="radio" name="age consent">
+          <input type="radio" name="age consent">
         I am 18 years old or older
         </label>
-        </fieldset>
+      </fieldset>
       <fieldset class="group-form">
         <label class="field-form">
         volume:
-        <input type="range" name="volume">
+          <input type="range" name="volume">
         </label>
-      <label class="field-form">
+        <label class="field-form">
         favourite colour:
-        <input type="color" name="favourite colour">
+          <input type="color" name="favourite colour">
         </label>
   
       </fieldset>
         </label>
-        <fieldset class="group-form">
+      <fieldset class="group-form">
         <label class="field-form">
         time:
-        <input type="time" name="time">
-      <label class="field-form">
+          <input type="time" name="time">
+          <label class="field-form">
         date:
-        <input type="date" name="calendar">
+            <input type="date" name="calendar">
         </label>
         </fieldset>
       <fieldset class="group-form">
         <label class="field-form">
         Do you have any additional feedback?
-        <textarea name="feedback" minlength="50" 
+          <textarea name="feedback" minlength="50" 
         maxlength="500"></textarea>
         </label>
-        </fieldset>
+      </fieldset>
       <button type="submit">Submit</button>
     </form>
   </body>
