--- a/src/index.html
+++ b/src/index.html
@@ -20,25 +20,29 @@
         <label class="field-form">
         Name:
           <input type="text" name="name" 
-          autocomplete="off" required>
+          autocomplete="off" required
+          >
         </label>
         <label class="field-form">
         Age:
           <input type="number" name="age" 
           min="1" max="100" 
-          value="12">
+          value="12"
+          >
         </label>
         <label class="field-form">
         Email address:
           <input type="email" 
           name="email address" 
           placeholder="email@example.com" required 
-          multiple>
+          multiple
+          >
         </label>
         <label class="field-form">
         password:
           <input type="password" name="password" 
-          required>
+          required
+          >
         </label>
       </fieldset>
       <fieldset class="group-form">
@@ -77,7 +81,8 @@
         <label class="field-form">
         Do you have any additional feedback?
           <textarea name="feedback" minlength="50" 
-        maxlength="500"></textarea>
+        maxlength="500"
+        ></textarea>
         </label>
       </fieldset>
       <button type="submit">Submit</button>
