changed closing bracket 83 again

--- a/src/index.html
+++ b/src/index.html
@@ -82,7 +82,8 @@
         Do you have any additional feedback?
           <textarea name="feedback" minlength="50" 
         maxlength="500"
-          ></textarea>
+          >
+          </textarea>
         </label>
       </fieldset>
       <button type="submit">Submit</button>
