opened new terminal

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
         <label class="field-form">
         Name:
           <input type="text" name="name" 
-          autocomplete="off" required
+          npautocomplete="off" required
           >
         </label>
         <label class="field-form">
