--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,165 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <h1>HTML Form</h1>
+
+    <form
+      action="https://mate-academy-form-lesson.herokuapp.com/create-application"
+      method="post"
+      autocomplete="off"
+    >
+      <fieldset>
+        <legend>Personal information</legend>
+
+        <label for="surname">Surname:</label>
+        <input
+          type="text"
+          id="surname"
+          name="surname"
+        ><br>
+
+        <label for="name">Name:</label>
+        <input
+          type="text"
+          id="name"
+          name="name"
+          required
+        ><br>
+
+        <label for="old">How old are You?</label>
+        <input
+          type="number"
+          id="old"
+          value="12"
+          min="1"
+          max="100"
+        ><br>
+
+        <label for="birth">Full date of birth:</label>
+        <input
+          type="date"
+          id="birth"
+          name="birth"
+        ><br>
+
+        <label for="agreement">I accept the term of the agreement</label>
+        <input
+          type="checkbox"
+          id="agreement"
+          name="agreement"
+        >
+      </fieldset>
+
+      <fieldset>
+        <legend>Registration</legend>
+        <label for="email" >E-mail:</label>
+        <input
+          type="email"
+          name="email"
+          id="email"
+          placeholder="email@example.com"
+        ><br>
+
+        <label for="pass">Password:</label>
+        <input
+          type="password"
+          name="password"
+          id="pass"
+          minlength="6"
+        >
+      </fieldset>
+
+      <fieldset>
+        <legend>An interesting fact about you!</legend>
+
+        Do you love cats?
+        <input
+          type="radio"
+          name="loveCats"
+          id="yes"
+          value="Yes"
+        >
+        <label for="yes">Yes</label>
+        <input
+          type="radio"
+          name="loveCats"
+          id="no"
+          value="No"
+        >
+        <label for="no">No</label><br>
+
+        <label for="fColor">What is your favorite color?</label>
+        <input
+          type="color"
+          name="favoriteColor"
+          id="fColor"
+        ><br>
+
+        <label for="goBed">What time do you go to bed?</label>
+        <input
+          type="time"
+          name="goBed"
+          id="goBed"
+        ><br>
+
+        <div class="cont">
+          <label for="fCar">What are your favorite brand of cars?</label>
+          <!-- <input
+            type="text"
+            name="fCar"
+            list="fCar"
+          >
+          <datalist id="fCar">
+            <option value="BMW">BMW</option>
+            <option value="Audi">Audi</option>
+            <option value="Lada">Lada</option>
+          </datalist><br> -->
+          <select
+            name="fCar"
+            id="fCar" multiple
+          >
+            <option value="BMW">BMW</option>
+            <option value="Audi">Audi</option>
+            <option value="Lada">Lada</option>
+          </select>
+        </div>
+
+        <label for="rateWork">How do you rate our work?</label>
+        <input
+          type="range"
+          name="rateWork"
+          id="rateWork"
+          value="0"
+        >
+
+      </fieldset>
+
+      <fieldset>
+        <legend>Additional info:</legend>
+
+        <div class="cont">
+          <label for="comments" class="123">Comments</label>
+          <textarea
+            name="comments"
+            id="comments"
+            cols="20"
+            rows="2"
+            maxlength="1000"
+          >
+          </textarea>
+        </div>
+
+
+        <label for="recommend">Would you recommend us?</label>
+        <select name="recommend" id="recommend">
+          <option value="Yes">Yes</option>
+          <option value="No">No</option>
+        </select>
+
+      </fieldset>
+
+      <input type="submit" value="Submit">
+    </form>
+
     <script type="text/javascript" src="./main.js"></script>
   </body>
 </html>
