--- a/src/index.html
+++ b/src/index.html
@@ -60,14 +60,22 @@
         <div class="simple">
           <label>
             Full date of birth:
-            <input type="date" name="birth" required>
+            <input 
+            type="date" 
+            name="birth" 
+            required
+            >
           </label>
         </div>
         <div class="line"></div>
         <div>
           <label>
             I accept the term of the agreement:
-            <input type="checkbox" name="accept" required>
+            <input 
+            type="checkbox" 
+            name="accept" 
+            required
+            >
           </label>
         </div>
       </fieldset>
@@ -92,7 +100,11 @@
         <div>
           <label>
             Password:
-            <input type="password" name="pass" required>
+            <input 
+            type="password" 
+            name="pass" 
+            required
+            >
           </label>
         </div>  
       </fieldset>
@@ -134,7 +146,11 @@
         <div class="simple">
           <label>
             What time do you go to bad?
-            <input type="time" name="goToBad" required>
+            <input 
+            type="time" 
+            name="goToBad" 
+            required
+            >
           </label>
         </div>
         <div class="line"></div>
@@ -196,7 +212,11 @@
    
       <div class="simple">
         <label>
-          <input type="submit" id="sb" value="Submit">
+          <input 
+          type="submit" 
+          id="sb" 
+          value="Submit"
+          >
         </label>
       </div>
     </form>
