--- a/src/index.html
+++ b/src/index.html
@@ -157,7 +157,11 @@
         <div class="simple">
           <label>
             What are your favorite brand of cars?
-            <select name="cars" id="cars" multiple>
+            <select 
+            name="cars" 
+            id="cars" 
+            multiple
+            >
               <option value="BMW">BMW</option>
               <option value="Audi">Audi</option>
               <option value="Lada">Lada</option>
