add seconds and add mb14px to radio

--- a/src/index.html
+++ b/src/index.html
@@ -109,6 +109,7 @@
           type="time"
           name="goBed"
           id="goBed"
+          step="1"
         ><br>
 
         <div class="cont">
