--- a/src/index.html
+++ b/src/index.html
@@ -47,11 +47,12 @@
         <div class="simple">
           <label>
             How old are You?
-            <input type="number" 
+            <input 
+            type="number" 
             name="old" 
-            minlength="1" 
-            maxlength="100" 
-            placeholder="12" 
+            min="1" 
+            max="100" 
+            value="12" 
             required
             >
           </label>
@@ -195,19 +196,19 @@
             <textarea 
             name="comm" 
             id="comm" 
-            cols="15" 
+            cols="20" 
             rows="2"
             >
             </textarea>
           </label>
         </div>
-        <div class="line"></div>
+        
         <div>
           <label>
             Would you recommend us?
-            <select name="recomend" id="recomend">
-              <option value="Yes" selected>Yes</option>
-              <option value="No">No</option>
+            <select name="recomend" id="recomend" required>
+              <option value="yes" selected>yes</option>
+              <option value="no">no</option>
             </select>
           </label>
         </div>
