--- a/src/index.html
+++ b/src/index.html
@@ -18,44 +18,44 @@
           <label class="per-inform">
             Surname:
             <input 
-            type="text" 
-            name="Surname"
-            autocomplete="off"
+              type="text" 
+              name="Surname"
+              autocomplete="off"
             >
           </label>
           <label class="per-inform">
             Name:
             <input 
-            type="text" 
-            name="Name"
-            minlength="3"
-            maxlength="20"
-            autocomplete="off"
-            required
+              type="text" 
+              name="Name"
+              minlength="3"
+              maxlength="20"
+              autocomplete="off"
+              required
             >
           </label>
           <label class="per-inform">
             How old are You?
             <input 
-            type="number" 
-            name="age" 
-            value="12"
-            max="100"
-            min="1"
+              type="number" 
+              name="age" 
+              value="12"
+              max="100"
+              min="1"
             >
           </label>
           <label class="per-inform">
             Full date of birth:
             <input 
-            type="date" 
-            name="date"
+              type="date" 
+              name="date"
             >
           </label>
           <label class="last">
             I accept the term of the agreement
             <input 
-            type="checkbox" 
-            name="accept"
+              type="checkbox" 
+              name="accept"
             >
           </label>
         </fieldset>
@@ -66,19 +66,19 @@
           <label class="per-inform">
             E-mail:
             <input 
-            type="email" 
-            name="email"
-            placeholder="email@example.com"
+              type="email" 
+              name="email"
+              placeholder="email@example.com"
             >
           </label>
           <label class="last">
             Password:
             <input 
-            type="password" 
-            name="password"
-            required
-            minlength="6"
-            maxlength="15"
+              type="password" 
+              name="password"
+              required
+              minlength="6"
+              maxlength="15"
             >
           </label>
         </fieldset>
@@ -89,30 +89,32 @@
           <label class="per-inform">
             Do you love cats?
             <input 
-            type="radio" 
-            name="cats"
-            value="yes"
+              type="radio" 
+              name="cats"
+              value="yes"
             >
             Yes
+          </label>
+          <label class="per-inform">
             <input 
-            type="radio" 
-            name="cats"
-            value="no"
+              type="radio" 
+              name="cats"
+              value="no"
             >
             No
           </label>
           <label class="per-inform">
             What is your favorite color?
             <input 
-            type="color" 
-            name="color"
+              type="color" 
+              name="color"
             >
           </label>
           <label class="per-inform">
             What time do you go to bed?
             <input 
-            type="time" 
-            name="time"
+              type="time" 
+              name="time"
             >
           </label>
           <label class="per-inform">
@@ -126,10 +128,10 @@
           <label class="last">
             How do you rate our work?
             <input 
-            type="range" 
-            name="rate our work"
-            min="0"
-            max="100"
+              type="range" 
+              name="rate our work"
+              min="0"
+              max="100"
             >
           </label>
         </fieldset>
@@ -140,9 +142,9 @@
           <label class="per-inform">
             Comments:
             <textarea 
-            name="comments" 
-            cols="20" 
-            rows="2"
+              name="comments" 
+              cols="20" 
+              rows="2"
            ></textarea>
           </label>
           <label class="last">
