--- a/src/index.html
+++ b/src/index.html
@@ -86,8 +86,8 @@
       <div class="forms">
         <fieldset>
           <legend>An interesting fact about you!</legend>
-          <label class="per-inform">
-            Do you love cats?
+          Do you love cats?
+          <label class="per-inform_cats">
             <input 
               type="radio" 
               name="cats"
@@ -95,7 +95,7 @@
             >
             Yes
           </label>
-          <label class="per-inform">
+          <label class="per-inform_cats">
             <input 
               type="radio" 
               name="cats"
