--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,15 @@
       name="viewport"
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     >
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta 
+    http-equiv="X-UA-Compatible" 
+    content="ie=edge"
+    >
     <title>HTML Form</title>
-    <link rel="stylesheet" href="./style.css">
+    <link 
+    rel="stylesheet" 
+    href="./style.css"
+    >
   </head>
   <body>
     <script type="text/javascript" src="./main.js"></script>
@@ -16,7 +22,8 @@
     <form 
       action="https://mate-academy-form-lesson.herokuapp.com/create-application" 
       method="post"
-      class="form">
+      class="form"
+      >
 
       <fieldset class="group">
         <legend>
@@ -25,7 +32,8 @@
         <div class="simple">
           <label>
             Surname:
-            <input type="text" 
+            <input 
+            type="text" 
             name="sname" 
             required 
             autocomplete="off"
@@ -36,14 +44,15 @@
         <div class="simple">
           <label>
             Name:
-            <input type="text" 
+            <input 
+            type="text" 
             name="name" 
             required 
             autocomplete="off"
             >
           </label>
         </div>
-        <div class="line"></div>
+        
         <div class="simple">
           <label>
             How old are You?
@@ -57,7 +66,7 @@
             >
           </label>
         </div>
-        <div class="line"></div>
+        
         <div class="simple">
           <label>
             Full date of birth:
@@ -90,7 +99,8 @@
         <div class="simple">
           <label>
             E-mail:
-            <input type="email" 
+            <input 
+            type="email" 
             name="email" 
             placeholder="email@example.com" 
             required
@@ -206,8 +216,17 @@
         <div>
           <label>
             Would you recommend us?
-            <select name="recomend" id="recomend" required>
-              <option value="yes" selected>yes</option>
+            <select 
+            name="recomend" 
+            id="recomend" 
+            required
+            >
+              <option 
+              value="yes" 
+              selected
+              >
+                yes
+              </option>
               <option value="no">no</option>
             </select>
           </label>
