Fixed after code review

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,8 @@
         <legend>Personal information</legend>
         <label class="form-field">
           Surname:
-          <input type="text"
+          <input
+            type="text"
             name="surname"
             minlength="3"
             autocomplete="off"
@@ -34,7 +35,8 @@
         </label>
         <label class="form-field">
           How old are You?
-          <input type="number"
+          <input
+            type="number"
             name="age"
             value="12"
             min="1"
