Fixed after code review

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
             name="surname"
             minlength="3"
             autocomplete="off"
+            required
           >
         </label>
         <label class="form-field">
