--- a/src/index.html
+++ b/src/index.html
@@ -11,98 +11,102 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <h1>HTML Form</h1>
-    <script type="text/javascript" src="./main.js"></script>
-    <fieldset class="gr_form">
-      <legend>Personal Information</legend>
-      <label class="form">
-      Surname:
-        <input type="text" name="surname">
-      </label>
-      <label class="form">
-      Name:
-        <input type="text" name="name">
-      </label>
-      <label class="form">
-      How old are You?
-        <input type="number" name="how-old-are-you" 
-      value="12" 
-      min="1" 
-      max="100"
-        >
-      </label>
-      <label class="form">
-      Full date of birth:
-        <input type="date" name="full-date-of-birth" >
 
-      </label>
-      <label class="form">
-      I accept the tetn of the agreement
-        <input type="checkbox" name="accent" 
-      required
-        >
-      </label>
-    </fieldset>
-    <fieldset>
-      <legend>Registration</legend>
-      <label class="form">E-mail:
-        <input type="email" name="email" 
+    <script type="text/javascript" src="./main.js"></script>
+    <form action="http://localhost:3000/api" method="post">
+      <fieldset class="gr_form">
+        <legend>Personal information</legend>
+        <label class="form">
+      Surname:
+          <input type="text" name="surname">
+        </label>
+        <label class="form">
+      Name:
+          <input type="text" name="name">
+        </label>
+        <label class="form">
+      How old are You?
+          <input type="number" name="how-old-are-you" 
+      value="12" 
+      min="1"
+      max="100"
+          >
+        </label>
+        <label class="form">
+      Full date of birth:
+          <input type="date" name="full-date-of-birth" >
+
+        </label>
+        <label>
+      I accept the term of the agreement
+          <input type="checkbox" name="accent">
+        </label>
+      </fieldset>
+      <fieldset class="gr_form">
+        <legend>Registration</legend>
+        <label class="form">E-mail:
+          <input type="email" name="email" 
         placeholder="email@example.com" 
         required
-        >
-      </label>
-      <label class="form">Password:
-        <input type="password" name="password" 
+          >
+        </label>
+        <label>Password:
+          <input type="password" name="password" 
         minlength="6" 
         maxlength="30" 
         required
-        >
-      </label>
-    </fieldset>
-    <fieldset class="gr_form">
-      <legend>An interesing fact about you!</legend>
-      <lable class="form">
-        Do yo love cats?
-        <input type="radio" name="yes">
+          >
+        </label>
+      </fieldset>
+      <fieldset class="gr_form">
+        <legend>An interesting fact about you!</legend>
+        <lable class="form">
+        Do you love cats?
+          <input type="radio" name="yes">
       Yes
-        <input type="radio" name="no">
+          <input type="radio" name="no">
       No
-      </lable>
-      <lable class="form">
-        What isyour favorite color?
-        <input type="color" name="color">
-      </lable>
-      <lable class="form">
+        </lable>
+        <lable class="form">
+        What is your favorite color?
+          <input type="color" name="color">
+        </lable>
+        <lable class="form">
         What time do you go to bed?
-        <input type="time" name="time">
-      </lable>
-      <label class="form">
+          <input type="time" name="time">
+        </lable>
+        <label class="form">
         What are your favorite brand of cars?
-        <select name="cars" multiple>
-          <option value="BMV">BMV</option>
-          <option value="Audi">Audi</option>
-          <option value="Lada">Lada</option>
-        </select>
-      </label>
-      <label class="form">
-      How do you rate work?
-        <input type="range" name="rate-work">
-      </label>
-    </fieldset>
-    <fieldset class="gr_form">
-      <legend>Additional info:</legend>
-      <label class="form">
+          <select name="cars" multiple>
+            <option value="BMW">BMW</option>
+            <option value="Audi">Audi</option>
+            <option value="Lada">Lada</option>
+          </select>
+        </label>
+        <label>
+      How do you rate our work?
+          <input type="range" name="rate-work" 
+        value="0"
+          >
+        </label>
+      </fieldset>
+      <fieldset class="gr_form">
+        <legend>Additional info:</legend>
+        <label class="form">
         Comments:
-        <textarea name="comments"></textarea>
-      </label>
-      <label class="form">
+          <textarea name="comments"></textarea>
+        </label>
+        <label>
         Would you recommend us?
-        <select>
-          <option name="recommendet" >Yes</option>
-          <option name="recommendet">No</option>
-        </select>
+          <select>
+            <option name="recommendet" >Yes</option>
+            <option name="recommendet">No</option>
+          </select>
+        </label>
+      </fieldset>
+      <label>
+        <button type="submit" name="submit">Submit</button>
       </label>
-    </fieldset>
-    <button type="submit">Submit</button>
+    </form>  
   </body>
 </html>
